# lark-agent-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_logging.py  bootstrap.sh  codebase_configs.example.json  docker-compose.yml  feishu_mapping.example.json  main.py  pyproject.toml
agent/: __init__.py  analyze_err_logs_agent.py  claude_code.py  claude_code_agent.py  err_logs_agent.py  jenkins_agent.py  log.py  qa_agent.py
agents/: claude_code_agent.py  devops_agent.py  intent.py  jenkins_agent.py  qa_agent.py
devops/: __init__.py  codebase_config.py  config.py
devopsagents/: __init__.py  config.py  devops_agent.py  router.py
devopsagents/agents/: __init__.py  base.py  claude_code.py  claude_code_agent.py  cursor.py  jenkins_agent.py  qa_agent.py
lark/: __init__.py  client.py  feishu_mapping.py  handler.py
router/: gateway_router.py
tests/: test_resolve_open_id.py
webhook/: app.py  jenkins_parser.py
