[project]
name = "lark-agent-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "lark-oapi>=1.4.8",
    "python-dotenv>=1.0.0",
    "python-jenkins>=1.8.3",
    "uvicorn[standard]>=0.32.0",
]
